--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.5",
-        "livewire/livewire": "^3.5"
+        "livewire/livewire": "^3.5",
+        "darryldecode/cart": "^2.1" 
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
