--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.5",
         "livewire/livewire": "^3.5",
-        "darryldecode/cart": "^2.1" 
+        "spatie/laravel-permission": "^6.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
